// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<li
  className="cf-3962c9"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-3962c9 cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active 1`] = `
<li
  className="cf-5lu1qe"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-5lu1qe cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active dot 1`] = `
<li
  className="cf-kbbnb5"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-kbbnb5 cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active next 1`] = `
<li
  className="cf-c0xb27"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-c0xb27 cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render active prev 1`] = `
<li
  className="cf-c0xb27"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-c0xb27 cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled 1`] = `
<li
  className="cf-yr93k7"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-yr93k7 cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled dot 1`] = `
<li
  className="cf-bjc0ao"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-bjc0ao cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled next 1`] = `
<li
  className="cf-mgj6am"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-mgj6am cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;

exports[`should render disabled prev 1`] = `
<li
  className="cf-mgj6am"
  role={null}
>
  <a
    aria-label={undefined}
    className="cf-mgj6am cf-fyzuiq"
    href="#"
    id={undefined}
    onClick={[Function]}
    style={undefined}
  >
    PaginationItem
  </a>
</li>
`;
